Fix video tile overflow

--- a/app/assets/stylesheets/lentil/breakpoint/sass/_components.scss
+++ b/app/assets/stylesheets/lentil/breakpoint/sass/_components.scss
@@ -118,7 +118,8 @@ div.images {
         left: 0;
         width: 100%;
         height: 100%;
-        padding: 2px 4px 2px 4px;
+        margin: 2px 4px 2px 4px;
+        overflow: hidden;
 
         .square-media {
             width: 100%;
